# marketview 0.1.6

## What's new
* Updated theme_mvl to include more distinct grid lines - the version without them is theme_mvl_old

## Other Changes
* Default mvl_foot for ppt_png is now FALSE

# marketview 0.1.5

## What's new
* Added CAU and MB maps for Tauranga
* Added Stats NZ CAU population projections
* Added 2013 meshblock data for Tauranga and Wellington

## Other stuff
* Small updates to create_project


# marketview 0.1.4

## What's New
* Added shapefiles for NZ CAUs because I had to use that data this morning.

## Bug Fixes
* Bug fixes on `ppt_png`
* `create_project` has been updated to create scripts that are ready to use with the correct project name and directories.


# marketview 0.1.3

## What's New
* Added a `NEWS.md` file to track changes to the package.

## Bug Fixes
* `bounding_box()` works now, and added the option not to draw the border.
* `save_plot()` works, had a misnamed variable.
* `save_table()` coerces to data.frame first, so it'll work in a dplyr chain that returns a `tibble`/`tbl`.
* removed the whitespace at the bottom of the plot in `theme_mvl()`